Updates from Overleaf

--- a/CV.tex
+++ b/CV.tex
@@ -64,10 +64,8 @@ breaklinks}
 \href{https://www.google.com/maps/place/2619+First+Avenue,+Seattle,+WA+98121,+USA}
 {2615 First Avenue, Seattle, WA 98121, USA}
 \par
-\href{mailto:kedar.dabhadkar@gmail.com}
-{kedar.dabhadkar@gmail.com}
-\,\SubBulletSymbol\,
-+1\,(724)\,931-0383
+\href{mailto:kdabhadk@gmail.com}
+{kdabhadk@gmail.com}
 \,\SubBulletSymbol\,
 \href{\CVWebpage}
 {\url{\CVWebpage}}
@@ -272,7 +270,7 @@ Proficient: Python, R, SQL;  Intermediate: JAVA;	Basic: Bash, FORTRAN, C++, HTML
 
 
 \Entry
-{\textbf{Analysis of Medical Records Using Natural Language Processing }},
+{\textbf{Analysis of Medical Records Using Natural Language Processing}},
 Pittsburgh, PA
 \hfill
 \DatestampYM{2018}{06}
@@ -363,7 +361,7 @@ Natural Language Processing Model for Analysis of Medical Records.
 \Gap
 \BulletItem
 First Prize,
-HackAuton, Auton Lab, Carnegie Mellon University and Phillips,
+HackAuton, Auton Lab, Carnegie Mellon University and Phillips
 \hfill
 \DatestampYMD{2018}{03}{07}
 \begin{Detail}
@@ -373,7 +371,7 @@ Pattern Recognition in Electroencephalogram (EEG) of Brain.
 
 \Gap
 \BulletItem
-Narotam Sekhsaria Foundation Postgraduate Scholarship,
+Narotam Sekhsaria Foundation Postgraduate Scholarship
 \hfill
 \DatestampYM{2017}{05}
 \begin{Detail}
