--- a/CV.tex
+++ b/CV.tex
@@ -25,7 +25,7 @@
 \newcommand{\CVAuthor}{Kedar Dabhadkar}
 \newcommand{\CVTitle}{Kedar Dabhadkar's CV}
 \newcommand{\CVNote}{CV compiled on {\today}}
-\newcommand{\CVWebpage}{https://dkedar7.github.io}
+\newcommand{\CVWebpage}{https://dkedar.com}
 
 % PDF settings and properties.
 \hypersetup{
